# atlas-mcp

./: .gitignore  Agents.md  README.md  pyproject.toml
.github/prompts/: data.prompt.md
scripts/dsid_finder/: data_finder.py  utils.py
src/atlas_mcp/: __init__.py  central_page.py  prompts.py  server.py  tools.py
tests/: test_central_page.py  test_central_page_cache.py  test_server.py
